HttpGetBurst: support for defining how many requests are sent per ms